src/objects/DRDP_Study_Molecule__c.object
<CustomObject>
    <fields>
        <fullName>Molecule__c</fullName>
        <label>Molecule</label>
        <referenceTo>Molecule__c</referenceTo>
        <relationshipName>RWE_Study_Molecule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Study</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>RWE_Study_Molecule</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Molecule_TF__c</fullName>
        <inlineHelpText>This fields stores concatenation of country id and study id</inlineHelpText>
        <label>Unique Molecule TF</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Study Compound</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Study Compound Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Compounds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>